--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    implementation 'org.jsoup:jsoup:1.19.1'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.13.0'
 }
 
 test {
